Se cambia la fuente a px y se agrega bd

--- a/sandalia-plana-1.html
+++ b/sandalia-plana-1.html
@@ -5,17 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800&display=swap"
-      rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js"></script>
     <script src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-  integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
 
     <link rel="stylesheet" href="css/normalize.css " />
     <link rel="stylesheet" href="css/producto.css " />
@@ -28,16 +37,26 @@
           <p>ENVIOS A TODO EL TERRITORIO COLOMBIANO</p>
         </div>
         <div id="logo">
-        <a href="/index.html"><img src="/img/logo.jpeg" style="width: 25%;" alt="logo"></a>
+          <a href="/index.html"
+            ><img src="/img/logo.jpeg" style="width: 25%" alt="logo"
+          /></a>
         </div>
         <div id="nav">
           <nav>
             <ul>
               <li>
-                <a href="zapatos.html" style="color: rgb(131, 128, 128);">ZAPATOS</a>
+                <a href="zapatos.html" style="color: rgb(131, 128, 128)"
+                  >ZAPATOS</a
+                >
                 <div class="opciones">
                   <ul>
-                    <li><a href="/sandalia-plana-1.html" style="color: rgb(131, 128, 128);">SANDALIA PLANA </a></li>
+                    <li>
+                      <a
+                        href="/sandalia-plana-1.html"
+                        style="color: rgb(131, 128, 128)"
+                        >SANDALIA PLANA
+                      </a>
+                    </li>
                     <li><a href="#">PLATAFORMA</a></li>
                   </ul>
                 </div>
@@ -161,9 +180,9 @@
       <section class="descripcion-p">
         <div class="titulo">
           <h2>Tacón elegante</h2>
-        <div class="precios">
-          <p><s style="color: #e1baff">$80.000 </s>- $40.000</p>
-        </div>
+          <div class="precios">
+            <p><s style="color: #e1baff">$80.000 </s>- $40.000</p>
+          </div>
           <hr />
           <p class="descripcion-tarjeta">
             La sandalia tacón es un modelo usado para la sofisticación tanto de
@@ -228,19 +247,28 @@
         <hr />
         <div class="contacto">
           <div class="vinculos">
-           <a href="#" id="btn-abrir-popup"><img src="/img/producto/sandalias talla.svg" style="margin-right: 50px;" width="20%" alt="talla"></a>
-            <a href="#"><img src="/img/producto/whatsapp.svg" width="15%" alt="talla"></a>
+            <a href="#" id="btn-abrir-popup"
+              ><img
+                src="/img/producto/sandalias talla.svg"
+                style="margin-right: 50px"
+                width="20%"
+                alt="talla"
+            /></a>
+            <a href="#"
+              ><img src="/img/producto/whatsapp.svg" width="15%" alt="talla"
+            /></a>
           </div>
         </div>
       </section>
       <div class="overlay" id="overlay">
         <div class="popup" id="popup">
-          <a href="#" id="btn-cerrar-popup"class="btn-cerrar-popup "><i class="fas fa-times"></i></a>
+          <a href="#" id="btn-cerrar-popup" class="btn-cerrar-popup"
+            ><i class="fas fa-times"></i
+          ></a>
           <h3>CONSULTA TU TALLA CON ESTA TABLA</h3>
           <div class="div-img">
-            <img src="/img/producto/tallas.svg" alt="talla-img">
+            <img src="/img/producto/tallas.svg" alt="talla-img" />
           </div>
-          
         </div>
       </div>
 
@@ -251,7 +279,7 @@
             <img src="img/zapatos/sandalia-plana.jpg" alt="tacon" />
             <article>
               <h2>Tacón elegante</h2>
-              <p><s style="color: #e1baff;">$80.000</s>- $40.000</p>
+              <p><s style="color: #e1baff">$80.000</s>- $40.000</p>
               <button><a href="#">Ver producto.</a></button>
             </article>
           </div>
@@ -260,7 +288,7 @@
             <img src="img/zapatos/sandalia-plana.jpg" alt="tacon" />
             <article>
               <h2>Tacón elegante</h2>
-              <p><s style="color: #e1baff;">$80.000</s>- $40.000</p>
+              <p><s style="color: #e1baff">$80.000</s>- $40.000</p>
               <button><a href="#">Ver producto.</a></button>
             </article>
           </div>
@@ -273,67 +301,74 @@
               <button><a href="#">Ver producto.</a></button>
             </article>
           </div>
-        
         </div>
-
       </section>
-  <footer>
-    <div id="footer">
-      <div id="redes">
-        <h4>REDES SOCIALES</h4>
-        <nav>
-          <ul>
-            <li>
-              <a href="#"> <img src="img/footer/whatsapp_48px.svg" alt="whatsapp"> 300 2140641</a>
-            </li>
-            <li>
-              <a href="#"> <img src="img/footer/facebook_48px.svg" alt="whatsapp"> facebook.com</a>
-            </li>
-            <li>
-              <a href="#"> <img src="img/footer/instagram_48px.svg" alt="whatsapp"> instagram.com</a>
-            </li>
-          </ul>
-        </nav>
-  
-      </div>
-      <div id="servicio">
-        <h4>SERVICIO AL CLIENTE</h4>
-        <nav>
-          <ul>
-            <li> <a href="#">Nosotros</a></li>
-            <li> <a href="#">Política de privacidad</a></li>
-            <li> <a href="#">Política de envío</a></li>
-            <li> <a href="#">Contacto</a></li>
-          </ul>
-        </nav>
-  
-      </div>
-      <div id="antonella">
-        <img src="img/logo.jpeg" alt="logo">
-        <p id="snd">Somos una empresa que se dedica a la venta y fabricacion de calzado en el departamento de santander,
-          brindamos lo mejor en calidad y precios de la región.</p>
-      </div>
-  
+      <footer>
+        <div id="footer">
+          <div id="redes">
+            <h4>REDES SOCIALES</h4>
+            <nav>
+              <ul>
+                <li>
+                  <a href="#">
+                    <img src="img/footer/whatsapp_48px.svg" alt="whatsapp" />
+                    300 2140641</a
+                  >
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="img/footer/facebook_48px.svg" alt="whatsapp" />
+                    facebook.com</a
+                  >
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="img/footer/instagram_48px.svg" alt="whatsapp" />
+                    instagram.com</a
+                  >
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div id="servicio">
+            <h4>SERVICIO AL CLIENTE</h4>
+            <nav>
+              <ul>
+                <li><a href="#">Nosotros</a></li>
+                <li><a href="#">Política de privacidad</a></li>
+                <li><a href="#">Política de envío</a></li>
+                <li><a href="#">Contacto</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div id="antonella">
+            <img src="img/logo.jpeg" alt="logo" />
+            <p id="snd">
+              Somos una empresa que se dedica a la venta y fabricacion de
+              calzado en el departamento de santander, brindamos lo mejor en
+              calidad y precios de la región.
+            </p>
+          </div>
+        </div>
+        <div id="cp">
+          <p>Copyright © 2021 | ANTONELLA | BUCARAMANGA - SANTANDER</p>
+        </div>
+      </footer>
     </div>
-    <div id="cp">
-      <p> Copyright © 2021 | ANTONELLA | BUCARAMANGA - SANTANDER</p>
-    </div>
-  </footer>
-      </div>
-      <script>
-        var btnAbrirPopup = document.getElementById('btn-abrir-popup'),
-            overlay =document.getElementById('overlay'),
-            popup =document.getElementById('popup'),
-            btnCerrarPopup =document.getElementById('btn-cerrar-popup');
+    <script>
+      var btnAbrirPopup = document.getElementById("btn-abrir-popup"),
+        overlay = document.getElementById("overlay"),
+        popup = document.getElementById("popup"),
+        btnCerrarPopup = document.getElementById("btn-cerrar-popup");
 
-            btnAbrirPopup.addEventListener('click', function(){
-              overlay.classList.add('active');
-              popup.classList.add('active');
-            });
-            btnCerrarPopup.addEventListener('click', function(){
-              overlay.classList.remove('active');
-              popup.classList.remove('active');
-            })
-      </script>
+      btnAbrirPopup.addEventListener("click", function () {
+        overlay.classList.add("active");
+        popup.classList.add("active");
+      });
+      btnCerrarPopup.addEventListener("click", function () {
+        overlay.classList.remove("active");
+        popup.classList.remove("active");
+      });
+    </script>
   </body>
 </html>
