--- a/zapatos.html
+++ b/zapatos.html
@@ -32,7 +32,7 @@
                 <a href="/zapatos.html" style="color: rgb(131, 128, 128);">ZAPATOS</a>
                 <div class="opciones">
                   <ul>
-                    <li><a href="#">SANDALIA PLANA </a></li>
+                    <li><a href="/sandalia-plana-1.html">SANDALIA PLANA </a></li>
                     <li><a href="#">PLATAFORMA</a></li>
                   </ul>
                 </div>
